--- a/JS-lessons/project/design.css
+++ b/JS-lessons/project/design.css
@@ -25,24 +25,26 @@ a {
 }
 
 .user-details {
-    background: #e4d3fc;
+    /*background: #e4d3fc;*/
+    background: linear-gradient(45deg, rgb(187, 149, 225), rgb(136, 39, 38));
     width: 85%;
     max-width: 600px;
     margin: auto;
     margin-top: 25px;
-    margin-bottom: 25px;
+    margin-bottom: 25px;rgb
     box-sizing: border-box;
     padding: 20px;
     border-radius: 10px;
-    border: 4px solid rgba(165, 59, 185, 0.76);
+    border: 4px solid rgba(214, 141, 229, 0.76);
     box-shadow: 0 1px 2px 0 rgba(44,47,60,0.06), 0 3px 10px 0 rgba(44,47,60,0.09);
+    color: #1f1f3b;
 }
 .postDetailsButton {
     width: 85%;
     height: 30px;
     margin: 0 auto;
     display: block;
-    background: rgba(165, 59, 185, 0.76);
+    background: rgb(206, 136, 229);
     cursor: pointer;
     border-radius: 3px;
 
@@ -52,9 +54,30 @@ a {
     flex-wrap: wrap;
 }
 .post {
-    background: rgb(187, 149, 225);
+    background: linear-gradient(45deg, rgb(192, 102, 99), rgb(187, 149, 225));
     margin: 10px;
     width: 200px;
+    height: 180px;
     margin-left: calc(10% - 100px);
     margin-right: calc(10% - 100px);
+    display:flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    border-radius: 10px;
+    border: 4px solid rgba(214, 141, 229, 0.76);
+}
+.postAdd {
+    background: #e4d3fc;
+}
+.comments {
+    background: #bb95e1;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+.comments > li {
+    max-width: 200px;
+    background: #e4d3fc;
+    margin: 10px;
 }
